// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth user add roles errors should render an error on the select if error occurred 1`] = `
<div
  className="sc-iCoHVE jPPvpm"
>
  <div
    className="sc-fujyUd juGuta"
  >
    <form
      onSubmit={[MockFunction]}
    >
      <label
        className="sc-bdnylx fmMyJN"
        htmlFor="role"
      >
        <span
          className="sc-gtssRu hqOiqN"
        >
          Choose new role
        </span>
        <span
          className="sc-dlnjPT jmGZsX"
        >
          something went wrong
        </span>
        <select
          className="sc-eCApGN gaLaVZ"
          id="role"
          name="role"
          onChange={[MockFunction]}
        >
          <option
            value="--"
          >
            -- Select --
          </option>
          <option
            data-qa="ROLE_1_option"
            value="ROLE_1"
          >
            Role 1
          </option>
          <option
            data-qa="ROLE_3_option"
            value="ROLE_3"
          >
            Role 3
          </option>
        </select>
      </label>
      <div
        className="sc-pNWxx heSyuw"
      >
        <button
          className="sc-jSFkmK bVOnRo"
          data-qa="add-button"
          disabled={false}
          type="submit"
        >
          Add role
        </button>
        <button
          className="sc-jSFkmK hJcAHM"
          data-qa="cancel-button"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Auth user add roles no roles should render correctly with user and no roles 1`] = `
<div
  className="sc-iCoHVE jPPvpm"
>
  <div
    className="sc-fujyUd juGuta"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        data-qa="no-roles"
      >
        No roles available
      </div>
      <div
        className="sc-pNWxx heSyuw"
      >
        <button
          className="sc-jSFkmK hJcAHM"
          data-qa="cancel-button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Auth user add roles should render the add role page with a filtered list of roles 1`] = `
<div
  className="sc-iCoHVE jPPvpm"
>
  <div
    className="sc-fujyUd juGuta"
  >
    <form
      onSubmit={[MockFunction]}
    >
      <label
        className="sc-bdnylx YDaVd"
        htmlFor="role"
      >
        <span
          className="sc-gtssRu hqOiqN"
        >
          Choose new role
        </span>
        <select
          className="sc-eCApGN eiTyYm"
          id="role"
          name="role"
          onChange={[MockFunction]}
        >
          <option
            value="--"
          >
            -- Select --
          </option>
          <option
            data-qa="ROLE_1_option"
            value="ROLE_1"
          >
            Role 1
          </option>
          <option
            data-qa="ROLE_3_option"
            value="ROLE_3"
          >
            Role 3
          </option>
        </select>
      </label>
      <div
        className="sc-pNWxx heSyuw"
      >
        <button
          className="sc-jSFkmK bVOnRo"
          data-qa="add-button"
          disabled={false}
          type="submit"
        >
          Add role
        </button>
        <button
          className="sc-jSFkmK hJcAHM"
          data-qa="cancel-button"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;
